Exercise1_11/manifests/deployment_pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      securityContext:
        fsGroup: 2000
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: pingpong
          image: vuolahti/pingpong:02
          volumeMounts:
          - name: shared-image
            mountPath: /tmp/kube
