Exercise1_11/manifests/service_logoutput.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput # This is the app as declared in the Deployment
  ports:
    - port: 2345 # This is a port that is available to the cluster
      protocol: TCP
      targetPort: 8080 # This is the target port
